[feat] finished get invoice detail merchant
