# documentation/openapi.yaml
@@ -1298,13 +1298,15 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/inline_response_500"
-  /invoices/{id}:
+  /invoices/{invoice_id}/merchant:
     get:
+      security:
+        - merchantBearerAuth: []
       tags:
         - Invoice
-      summary: "[In Progress] Get invoice by id "
+      summary: "Get invoice by id by merchant"
       parameters:
-        - name: id
+        - name: invoice_id
           in: path
           description: id invoice
           required: true
@@ -1318,7 +1320,77 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/inline_response_200_19"
+                properties:
+                  error:
+                    type: string
+                    nullable: true
+                    default: null
+                  data:
+                    type: object
+                    properties:
+                      invoice_id:
+                        type: integer
+                      merchant_id:
+                        type: integer
+                      customer_id:
+                        type: integer
+                      customer_name:
+                        type: string
+                      customer_address:
+                        type: string
+                        nullable: true
+                        default: null
+                      payment_status_id:
+                        type: integer
+                      payment_status_name:
+                        type: string
+                      payment_type_id:
+                        type: integer
+                        nullable: true
+                        default: null
+                      payment_type_name:
+                        type: string
+                        nullable: true
+                        default: null
+                      merchant_bank_id:
+                        type: integer
+                        nullable: true
+                        default: null
+                      total_price:
+                        type: integer
+                      product_quantity:
+                        type: integer
+                      note:
+                        type: string
+                        nullable: true
+                        default: null
+                      message:
+                        type: string
+                        nullable: true
+                        default: null
+                      due_at:
+                        type: string
+                      created_at:
+                        type: string
+                      updated_at:
+                        type: string
+                      invoice_detail:
+                        type: array
+                        items:
+                          type: object
+                          properties:
+                            invoice_detail_id:
+                              type: integer
+                            product:
+                              type: string
+                            quantity:
+                              type: integer
+                            price:
+                              type: integer
+                            created_at:
+                              type: string
+                            updated_at:
+                              type: string
         "400":
           description: bad request
           content:
@@ -1330,7 +1402,16 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/inline_response_404"
+                properties:
+                  error:
+                    type: object
+                    properties:
+                      message:
+                        type: string
+                        default: record not found
+                  data:
+                    type: object
+                    default: null
         "500":
           description: internal server error
           content:
